--- a/blogspot.html
+++ b/blogspot.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <H1>APRENDIENDO GIT </H1>
-    <P>Seguimos haciendo pruebas con GIT</P>
-    <p>esto es magia</p>
-    
+    <div class="contenedor">
+        <H1>APRENDIENDO GIT </H1>
+        <P>Seguimos haciendo pruebas con GIT</P>
+        <p>esto es magia</p>
+    </div>
 </body>
 </html>
