--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,7 @@
         <H1>APRENDIENDO GIT </H1>
         <P>Seguimos haciendo pruebas con GIT</P>
         <p>esto es magia</p>
+        <p>estoy en la rama productos</p>
     </div>
 </body>
 </html>
